--- a/mainapp/templates/mainapp/simple_upload.html
+++ b/mainapp/templates/mainapp/simple_upload.html
@@ -1,17 +1,22 @@
-{% extends 'base.html' %}
-
 {% load static %}
 
-{% block content %}
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <input type="file" name="myfile">
-    <button type="submit">Upload</button>
-  </form>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Simple File Upload</title>
+  </head>
+  <body>
+    <form method="post" enctype="multipart/form-data">
+      {% csrf_token %}
+      <input type="file" name="myfile">
+      <button type="submit">Upload</button>
+    </form>
 
-  {% if uploaded_file_url %}
-    <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
-  {% endif %}
+    {% if uploaded_file_url %}
+      <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
+    {% endif %}
 
-  <p><a href="{% url 'home' %}">Return to home</a></p>
-{% endblock %}
+    <p><a href="{% url 'home' %}">Return to home</a></p>
+  </body>
+</html>
