--- a/mainapp/templates/mainapp/simple_upload.html
+++ b/mainapp/templates/mainapp/simple_upload.html
@@ -17,6 +17,6 @@
       <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
     {% endif %}
 
-    <p><a href="{% path 'hello' %}">Return to home</a></p>
+    <p><a href=/>Return to home</a></p>
   </body>
 </html>
